@@ -1385,7 +1385,8 @@ typedef [uuid(D09B9F0E-C1AE-40dd-84D6-B1F74053AA8E)]
                 [propput, id(394), helpstring("property FallThrough")] HRESULT FallThrough([in] VARIANT_BOOL newVal);
                 [propget, id(431), helpstring("property Legacy")] HRESULT Legacy([out, retval] VARIANT_BOOL *pVal);
                 [propput, id(431), helpstring("property Legacy")] HRESULT Legacy([in] VARIANT_BOOL newVal);
-        };
+                [propget, id(19), helpstring("property ActiveBall")] HRESULT LastCapturedBall([out, retval] IBall **pVal);
+		};
 
         [
         uuid(BA80F24A-78B2-4c5d-A28D-0F1A9E7C555C),
